objects/SMEDepartment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omni_Script_Help_Text__c</fullName>
        <description>Fields to house the help text to be displayed in the Omni Script on when to choose a specific SME department.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Omni Script Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME_Department_Code__c</fullName>
        <displayFormat>SDC-{0000}</displayFormat>
        <label>SME Department Code</label>
        <type>AutoNumber</type>
    </fields>
    <label>SMEDepartment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Department_Name__c</columns>
        <columns>Omni_Script_Help_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SMEDepartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMEDepartment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>